@@ -48,7 +48,7 @@ class tx_contagged extends tslib_pibase {
 	var $pi_checkCHash = true;
 	var $dataTable = 'tx_contagged_terms';
 	var $conf; // the TypoScript configuration array
-
+	var $termsFoundArray = array(); // an array of main terms for each term found in the cObj
 
 	/**
 		* The method for parsing, tagging and linking the terms in a cObj
@@ -59,7 +59,7 @@ class tx_contagged extends tslib_pibase {
 		*/
 	function main($content, $conf) {
 		$this->conf = $GLOBALS['TSFE']->tmpl->setup['plugin.'][$this->prefixId.'.'];
-
+		
 		// exit if the page should be skipped
 		if ($this->isPageToSkip()) {
 			return $content;
@@ -130,14 +130,21 @@ class tx_contagged extends tslib_pibase {
 							// the  term is handled as $matchedTerm, so it doesn't conflict with case (in)sensitivity of the RegEx
 							$matchLength = strlen($content[$intKey]) - (strlen($pieces[0]) + strlen($pieces[1]));
 							$matchedTerm = substr($content[$intKey], strlen($pieces[0]), $matchLength);
-							$GLOBALS['TSFE']->register['matchedTerm'] = $matchedTerm;
+							$GLOBALS['TSFE']->register['contagged_matchedTerm'] = $matchedTerm;
 							if ( trim($matchedTerm) && ($inTag === false) && ($occuranciesOfTerm < $maxOccur) ) {
+								// Build an array of terms found in the content.
+								// This will be used to store them as keywords of the page.
+								// The term used will be the replaced term. If there is no replacement the main term will be used.
+								$this->termsFoundArray[] = $termArray['term_replace']?$termArray['term_replace']:$termArray['term_main'];
+								
 								$this->replaceMatchedTerm(&$matchedTerm,$typeConfigArray,$termArray);
 								$this->linkMatchedTerm(&$matchedTerm,$typeConfigArray,$termArray);
 
 								// call stdWrap to handle the matched term via TS
 								// TODO: wrapping inside AND outside the a-tag should be enabled
-								$matchedTerm = $this->cObj->stdWrap($matchedTerm,$typeConfigArray['stdWrap.']);
+								if ($typeConfigArray['stdWrap.']) {
+									$matchedTerm = $this->cObj->stdWrap($matchedTerm,$typeConfigArray['stdWrap.']);
+								}
 
 								$matchedTerm = $before . $matchedTerm . $after;
 
@@ -156,9 +163,27 @@ class tx_contagged extends tslib_pibase {
 			
 			}
 		}
+		
+		if ($this->conf['updateKeywords'] > 0) {
+			$this->insertKeywords();
+		}
 
 		return $content;
 
+	}
+
+	function insertKeywords() {
+		// make a list of unique terms found in the content
+		$this->termsFoundArray = array_unique($this->termsFoundArray);
+		$termsFoundList = implode(',',$this->termsFoundArray);
+		// build an array passed to the UPDATE query
+		$updateArray = array($this->prefixId . '_keywords' => $termsFoundList);
+//		$updateArray = array('keywords' => $termsFoundList);
+		// execute sql-query
+		$res = $GLOBALS['TYPO3_DB']->exec_UPDATEquery('pages', // TABLE ...
+			'uid=' . $GLOBALS['TSFE']->id, // WHERE ...
+			$updateArray
+		);
 	}
 
 	function getTypeConfigArray($termArray) {
@@ -166,11 +191,12 @@ class tx_contagged extends tslib_pibase {
 		$typeConfigArray = $this->conf['types.'][$termArray['term_type'] . '.'];
 
 		// load several fields into the register to be handled by the TS setup
-		$GLOBALS['TSFE']->register['uid'] = $termArray['uid'];
-		$GLOBALS['TSFE']->register['desc_short'] = $termArray['desc_short'];
-		$GLOBALS['TSFE']->register['desc_long'] = $termArray['desc_long'];
-		$GLOBALS['TSFE']->register['term_replace'] = $termArray['term_replace'];
-		$GLOBALS['TSFE']->register['link'] = $termArray['link'];
+		$GLOBALS['TSFE']->register['contagged_uid'] = $termArray['uid'];
+		$GLOBALS['TSFE']->register['contagged_desc_short'] = $termArray['desc_short'];
+		$GLOBALS['TSFE']->register['contagged_desc_long'] = $termArray['desc_long'];
+		$GLOBALS['TSFE']->register['contagged_term_main'] = $termArray['term_main'];
+		$GLOBALS['TSFE']->register['contagged_term_replace'] = $termArray['term_replace'];
+		$GLOBALS['TSFE']->register['contagged_link'] = $termArray['link'];
 
 		return $typeConfigArray;
 
@@ -178,11 +204,7 @@ class tx_contagged extends tslib_pibase {
 
 	function linkMatchedTerm(&$matchedTerm,$typeConfigArray,$termArray) {
 		// check conditions if the term should be linked to a list page
-		if ( isset($typeConfigArray['linkToListPage']) ) {
-			$makeLink = ($typeConfigArray['linkToListPage'] > 0) ? true : false;
-		} else {
-			$makeLink = ($this->conf['linkToListPage'] > 0) ? true : false;
-		}					
+		$makeLink = $this->checkLocalGlobal($typeConfigArray,'linkToListPage');
 		if ( ($termArray['desc_long'] == '') || ($termArray['exclude'] > 0) ) {
 			$makeLink = false;
 		}
@@ -191,6 +213,7 @@ class tx_contagged extends tslib_pibase {
 		if ($makeLink) {
 			unset($typolinkConf); // TODO Is it necessary to unset the $typoLinkConf?
 			$listPage = ($typeConfigArray['listPage']?$typeConfigArray['listPage']:$this->conf['listPage']);
+			$GLOBALS['TSFE']->register['contagged_list_page'] = $termArray['uid'];
 			$typolinkConf['parameter'] = (int) $listPage;
 			$typolinkConf['useCacheHash'] = 1;
 			$typolinkConf['additionalParams'] =
@@ -215,6 +238,15 @@ class tx_contagged extends tslib_pibase {
 		}
 	}
 
+	function checkLocalGlobal($typeConfigArray,$attributeName) {
+		if ( isset($typeConfigArray[$attributeName]) ) {
+			$addAttribute = ($typeConfigArray[$attributeName] > 0) ? true : false;
+		} else {
+			$addAttribute = ($this->conf[$attributeName] > 0) ? true : false;
+		}
+		
+		return $addAttribute;
+	}
 
 	/**
 		* If the language of the term is undefined, 
@@ -225,12 +257,6 @@ class tx_contagged extends tslib_pibase {
 		* then the language attribute is added.
 		*/
 	function getLangAttribute($typeConfigArray,$termArray) {
-		// check if the global or local flag to add a language attribute is set
-		if ( isset($typeConfigArray['addLangAttribute']) ) {
-			$addLangAttribute = ($typeConfigArray['addLangAttribute'] > 0) ? true : false;
-		} else {
-			$addLangAttribute = ($this->conf['addLangAttribute'] > 0) ? true : false;
-		}
 		// get page language
 		if ($GLOBALS['TSFE']->config['config']['language']) {
 			$pageLanguage = $GLOBALS['TSFE']->config['config']['language'];
@@ -238,45 +264,29 @@ class tx_contagged extends tslib_pibase {
 			$pageLanguage = substr($GLOBALS['TSFE']->config['config']['htmlTag_langKey'],0,2);
 		}
 		// build language attribute if the page language is different from the terms language
-		if ( $addLangAttribute && !empty($termArray['term_lang']) && ( $pageLanguage!=$termArray['term_lang'] ) ) {
+		if ( $this->checkLocalGlobal($typeConfigArray,'addLangAttribute') && !empty($termArray['term_lang']) && ( $pageLanguage!=$termArray['term_lang'] ) ) {
 			$langAttribute = ' lang="' . $termArray['term_lang'] . '"';
 			$langAttribute .= ' xml:lang="' . $termArray['term_lang'] . '"';
-		} else {
-			$langAttribute = '';
 		}
 
 		return $langAttribute;
 	}
 
 	function getTitleAttribute($typeConfigArray,$termArray) {
-		if ( isset($typeConfigArray['addTitleAttribute']) ) {
-			$addTitleAttribute = ($typeConfigArray['addTitleAttribute'] > 0) ? true : false;
-		} else {
-			$addTitleAttribute = ($this->conf['addTitleAttribute'] > 0) ? true : false;
-		}					
-		if ($addTitleAttribute && isset($termArray['desc_short'])) {
+		if ($this->checkLocalGlobal($typeConfigArray,'addTitleAttribute') && isset($termArray['desc_short'])) {
 			$titleAttribute = ' title="' . $termArray['desc_short'] . '"';
-		} else {
-			$titleAttribute = '';
 		}
-
+		
 		return $titleAttribute;
 	}
 
 	function getCssClassAttribute($typeConfigArray,$termArray) {
-		if ( isset($typeConfigArray['addCssClassAttribute']) ) {
-			$addCssClassAttribute = ($typeConfigArray['addCssClassAttribute'] > 0) ? true : false;
-		} else {
-			$addCssClassAttribute = ($this->conf['addCssClassAttribute'] > 0) ? true : false;
-		}					
-		if ($addCssClassAttribute) {
+		if ($this->checkLocalGlobal($typeConfigArray,'addCssClassAttribute')) {
 			if ( $typeConfigArray['cssClass'] ) {
 				$cssClassAttribute = $this->pi_classParam($typeConfigArray['cssClass']);
 			} else {
 				$cssClassAttribute = $this->pi_classParam($termArray['term_type']);
 			}
-		} else {
-			$cssClassAttribute = '';
 		}
 
 		return $cssClassAttribute;
@@ -335,14 +345,16 @@ class tx_contagged extends tslib_pibase {
 		$terms = array ();
 		foreach ($result as $row) {
 			// build an array of alternative shortcurts (term_alt) and add the main term (term_main)
-			$terms = t3lib_div :: trimExplode('|', htmlspecialchars($row['term_alt']), $onlyNonEmptyValues = 1);
+			$terms = t3lib_div :: trimExplode(chr(10), htmlspecialchars($row['term_alt']), $onlyNonEmptyValues = 1);
 			$terms[] = trim(htmlspecialchars($row['term_main']));
+			// TODO sort the array by descending length of value string; in combination with the htmlparser this will prevend nesting
 			$desc_long = $this->cObj->parseFunc($row['desc_long'],$conf='',$ref='< lib.parseFunc_RTE');
 			// $desc_long = preg_replace('/(\015\012)|(\015)|(\012)/','<br />',$row['desc_long']);
 			// $desc_long = trim(htmlspecialchars($desc_long));
 			// put it all together
 			$dataArray[] = array (
 				'uid' => $row['uid'],
+				'term_main' => trim(htmlspecialchars($row['term_main'])),
 				'terms' => $terms,
 				'term_type' => $row['term_type'],
 				'term_lang' => $row['term_lang'],
