@@ -1,5 +1,15 @@
+# incude class tx_contagged as library 
+includeLibs.tx_contagged = EXT:contagged/class.tx_contagged.php
+
 # setup the content element by calling the user function 'main' of the class tx_contagged
-tt_content.text.20.parseFunc.userFunc = tx_contagged->main
+#tt_content.text.20.parseFunc.userFunc = tx_contagged->main
+tt_content.text.20.postUserFunc = tx_contagged->main
+
+
+#temp_content < styles.content.get
+#temp_content.stdWrap.postUserFunc = tx_contagged->main
+#styles.content.get >
+#styles.content.get < temp_content
 
 plugin.tx_contagged {
 	linkToListPage = {$contagged.linkToListPage}
@@ -11,6 +21,7 @@ plugin.tx_contagged {
 	addTitleAttribute = {$contagged.addTitleAttribute}
 	addLangAttribute = {$contagged.addLangAttribute}
 	addCssClassAttribute = {$contagged.addCssClassAttribute}
+	updateKeywords = {$contagged.updateKeywords}
 	types {
 
 		definition {
@@ -27,12 +38,12 @@ plugin.tx_contagged {
 				10 = TEXT
 				10.value = | <span><p>
 				20 = TEXT
-				20.data = register:matchedTerm
+				20.data = register:contagged_matchedTerm
 				30 = TEXT
 				30.value = </p>
 				40 = TEXT
 				40.required = 1
-				40.data = register:desc_long
+				40.data = register:contagged_desc_long
 				50 = TEXT
 				50.value = </span>
 			}
@@ -40,7 +51,8 @@ plugin.tx_contagged {
 
 		dfn_inline {
 			label = Definition (inline)
-			linkToList = 0
+			tag = dfn
+			linkToListPage = 0
 			addCssClassAttribute = 1
 			stdWrap.innerWrap.cObject = COA
 			stdWrap.innerWrap.cObject {
@@ -49,7 +61,7 @@ plugin.tx_contagged {
 				20 = TEXT
 				20.required = 1
 				20.stripHtml = 1
-				20.data = register:desc_long
+				20.data = register:contagged_desc_long
 				30 = TEXT
 				30.value = ]&nbsp;</span>
 			}
